clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr111331_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr111331-1.c" (c, x86_64-unknown-linux-gnu)
global b : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]
global a : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]

fn c(%arg0: s32i, %arg1: s32i, %arg2: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i, %arg2: s32i):
        %22 = alloca s32i, "d", align 4
        %23 = alloca s32i, "e", align 4
        %24 = alloca s32i, "f", align 4
        %25 = alloca s32i, "__retval", align 4
        store %arg0, %22
        store %arg1, %23
        store %arg2, %24
        scope {
                %33 = load %22 : s32i, align 4
                %34 = load %23 : s32i, align 4
                cmp
                if %35 {
                        %36 = load %23 : s32i, align 4
                        store %36, %25
                        %37 = load %25 : s32i
                        return %37
                }
                yield
        }
        scope {
                %28 = load %22 : s32i, align 4
                %29 = load %24 : s32i, align 4
                cmp
                if %30 {
                        %31 = load %24 : s32i, align 4
                        store %31, %25
                        %32 = load %25 : s32i
                        return %32
                }
                yield
        }
        %26 = load %22 : s32i, align 4
        store %26, %25
        %27 = load %25 : s32i
        return %27
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "g", align 4
        %2 = alloca s32i, "t", align 4
        %3 = const 0 : s32i
        store %3, %0
        %4 = const -1 : s32i
        store %4, %1, align 4
        %5 = get_global @b : s32i*
        %6 = load %5 : s32i, align 4
        %7 = const 30 : s32i
        %8 = add %6, %7 : s32i [nsw]
        %9 = const 29 : s32i
        %10 = load %1 : s32i, align 4
        %11 = const 29 : s32i
        %12 = add %10, %11 : s32i [nsw]
        %13 = call @c(%8, %9, %12) : s32i [all]
        %14 = get_global @a : s32i*
        store %13, %14, align 4
        %15 = get_global @a : s32i*
        %16 = load %15 : s32i, align 4
        store %16, %2, align 4
        scope {
                %19 = load %2 : s32i, align 4
                %20 = const 28 : s32i
                cmp
                if %21 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        %17 = const 0 : s32i
        store %17, %0
        %18 = load %0 : s32i
        return %18
}
