clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr111331_3.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr111331-3.c" (c, x86_64-unknown-linux-gnu)
global b : s32i = 0 [external, default, align 4, dso_local]
global a : s32i = 0 [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "d", align 4
    %2 = alloca s32i, "t", align 4
    %3 = const 0 : s32i
    store %3, %0
    %4 = get_global @b : s32i*
    %5 = load %4 : s32i, align 4
    %6 = const 30 : s32i
    %7 = add %5, %6 : s32i [nsw]
    store %7, %1, align 4
    scope {
        %16 = alloca s32i, "t", align 4
        %17 = load %1 : s32i, align 4
        %18 = const 29 : s32i
        %19 = cmp lt %17, %18 : bool
        %20 = ternary %19 ? { : s32i
            %29 = const 29 : s32i
            yield %29
        } : {
            %23 = load %1 : s32i, align 4
            %24 = const 28 : s32i
            %25 = cmp gt %23, %24 : bool
            %26 = ternary %25 ? { : s32i
                %28 = const 28 : s32i
                yield %28
            } : {
                %27 = load %1 : s32i, align 4
                yield %27
            }
            yield %26
        }
        store %20, %16, align 4
        %21 = load %16 : s32i, align 4
        %22 = get_global @a : s32i*
        store %21, %22, align 4
        yield
    }
    %8 = get_global @a : s32i*
    %9 = load %8 : s32i, align 4
    store %9, %2, align 4, volatile
    scope {
        %12 = get_global @a : s32i*
        %13 = load %12 : s32i, align 4
        %14 = const 28 : s32i
        %15 = cmp ne %13, %14 : bool
        if %15 {
            call @abort() [all]
            yield
        }
        yield
    }
    %10 = const 0 : s32i
    store %10, %0
    %11 = load %0 : s32i
    return %11
}
