clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr111431_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr111431-1.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg6: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg6: s32i):
        %109 = alloca s32i, "a", align 4
        %110 = alloca s32i, "__retval", align 4
        %111 = alloca s32i, "b", align 4
        store %arg6, %109
        %112 = load %109 : s32i, align 4
        %113 = const 0 : s32i
        %114 = cmp eq %112, %113 : bool
        %115 = cast(bool_to_int) %114 : s32i
        store %115, %111, align 4
        %116 = load %109 : s32i, align 4
        %117 = load %111 : s32i, align 4
        %118 = and %116, %117 : s32i
        store %118, %110
        %119 = load %110 : s32i
        return %119
}
fn func_0_(%arg5: s32i) -> bool [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg5: s32i):
        %97 = alloca s32i, "a", align 4
        %98 = alloca bool, "__retval", align 1
        %99 = alloca s32i, "b", align 4
        store %arg5, %97
        %100 = load %97 : s32i, align 4
        %101 = const 0 : s32i
        %102 = cmp eq %100, %101 : bool
        %103 = cast(bool_to_int) %102 : s32i
        store %103, %99, align 4
        %104 = load %97 : s32i, align 4
        %105 = load %99 : s32i, align 4
        %106 = and %104, %105 : s32i
        %107 = cast(int_to_bool) %106 : bool
        store %107, %98
        %108 = load %98 : bool
        return %108
}
fn func_0_volatile(%arg4: s32i) -> bool [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg4: s32i):
        %85 = alloca s32i, "a", align 4
        %86 = alloca bool, "__retval", align 1
        %87 = alloca s32i, "b", align 4
        store %arg4, %85
        %88 = load %85 : s32i, align 4, volatile
        %89 = const 0 : s32i
        %90 = cmp eq %88, %89 : bool
        %91 = cast(bool_to_int) %90 : s32i
        store %91, %87, align 4, volatile
        %92 = load %85 : s32i, align 4, volatile
        %93 = load %87 : s32i, align 4, volatile
        %94 = and %92, %93 : s32i
        %95 = cast(int_to_bool) %94 : bool
        store %95, %86
        %96 = load %86 : bool
        return %96
}
fn func_1_(%arg3: s32i) -> bool [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: s32i):
        %73 = alloca s32i, "a", align 4
        %74 = alloca bool, "__retval", align 1
        %75 = alloca s32i, "b", align 4
        store %arg3, %73
        %76 = load %73 : s32i, align 4
        %77 = const 1 : s32i
        %78 = cmp eq %76, %77 : bool
        %79 = cast(bool_to_int) %78 : s32i
        store %79, %75, align 4
        %80 = load %73 : s32i, align 4
        %81 = load %75 : s32i, align 4
        %82 = and %80, %81 : s32i
        %83 = cast(int_to_bool) %82 : bool
        store %83, %74
        %84 = load %74 : bool
        return %84
}
fn func_1_volatile(%arg2: s32i) -> bool [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i):
        %61 = alloca s32i, "a", align 4
        %62 = alloca bool, "__retval", align 1
        %63 = alloca s32i, "b", align 4
        store %arg2, %61
        %64 = load %61 : s32i, align 4, volatile
        %65 = const 1 : s32i
        %66 = cmp eq %64, %65 : bool
        %67 = cast(bool_to_int) %66 : s32i
        store %67, %63, align 4, volatile
        %68 = load %61 : s32i, align 4, volatile
        %69 = load %63 : s32i, align 4, volatile
        %70 = and %68, %69 : s32i
        %71 = cast(int_to_bool) %70 : bool
        store %71, %62
        %72 = load %62 : bool
        return %72
}
fn func_5_(%arg1: s32i) -> bool [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s32i):
        %49 = alloca s32i, "a", align 4
        %50 = alloca bool, "__retval", align 1
        %51 = alloca s32i, "b", align 4
        store %arg1, %49
        %52 = load %49 : s32i, align 4
        %53 = const 5 : s32i
        %54 = cmp eq %52, %53 : bool
        %55 = cast(bool_to_int) %54 : s32i
        store %55, %51, align 4
        %56 = load %49 : s32i, align 4
        %57 = load %51 : s32i, align 4
        %58 = and %56, %57 : s32i
        %59 = cast(int_to_bool) %58 : bool
        store %59, %50
        %60 = load %50 : bool
        return %60
}
fn func_5_volatile(%arg0: s32i) -> bool [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %37 = alloca s32i, "a", align 4
        %38 = alloca bool, "__retval", align 1
        %39 = alloca s32i, "b", align 4
        store %arg0, %37
        %40 = load %37 : s32i, align 4, volatile
        %41 = const 5 : s32i
        %42 = cmp eq %40, %41 : bool
        %43 = cast(bool_to_int) %42 : s32i
        store %43, %39, align 4, volatile
        %44 = load %37 : s32i, align 4, volatile
        %45 = load %39 : s32i, align 4, volatile
        %46 = and %44, %45 : s32i
        %47 = cast(int_to_bool) %46 : bool
        store %47, %38
        %48 = load %38 : bool
        return %48
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %3 = alloca s32i, "a", align 4
        %4 = const -10 : s32i
        store %4, %3, align 4
        for cond: {
            %34 = load %3 : s32i, align 4
            %35 = const 10 : s32i
            %36 = cmp le %34, %35 : bool
            condition %36
        } step: {
            %5 = load %3 : s32i, align 4
            %6 = inc %5 : s32i [nsw]
            store %6, %3, align 4
            yield
        } do {
            scope {
                scope {
                    do {
                        scope {
                            scope {
                                %27 = load %3 : s32i, align 4
                                %28 = call @func_0_(%27) : bool [all]
                                %29 = cast(bool_to_int) %28 : s32i
                                %30 = load %3 : s32i, align 4
                                %31 = call @func_0_volatile(%30) : bool [all]
                                %32 = cast(bool_to_int) %31 : s32i
                                %33 = cmp ne %29, %32 : bool
                                if %33 {
                                    call @abort() [all]
                                    yield
                                }
                                yield
                            }
                            yield
                        }
                        yield
                    } while {
                        %25 = const 0 : s32i
                        %26 = cast(int_to_bool) %25 : bool
                        condition %26
                    }
                    yield
                }
                scope {
                    do {
                        scope {
                            scope {
                                %18 = load %3 : s32i, align 4
                                %19 = call @func_1_(%18) : bool [all]
                                %20 = cast(bool_to_int) %19 : s32i
                                %21 = load %3 : s32i, align 4
                                %22 = call @func_1_volatile(%21) : bool [all]
                                %23 = cast(bool_to_int) %22 : s32i
                                %24 = cmp ne %20, %23 : bool
                                if %24 {
                                    call @abort() [all]
                                    yield
                                }
                                yield
                            }
                            yield
                        }
                        yield
                    } while {
                        %16 = const 0 : s32i
                        %17 = cast(int_to_bool) %16 : bool
                        condition %17
                    }
                    yield
                }
                scope {
                    do {
                        scope {
                            scope {
                                %9 = load %3 : s32i, align 4
                                %10 = call @func_5_(%9) : bool [all]
                                %11 = cast(bool_to_int) %10 : s32i
                                %12 = load %3 : s32i, align 4
                                %13 = call @func_5_volatile(%12) : bool [all]
                                %14 = cast(bool_to_int) %13 : s32i
                                %15 = cmp ne %11, %14 : bool
                                if %15 {
                                    call @abort() [all]
                                    yield
                                }
                                yield
                            }
                            yield
                        }
                        yield
                    } while {
                        %7 = const 0 : s32i
                        %8 = cast(int_to_bool) %7 : bool
                        condition %8
                    }
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    %2 = load %0 : s32i
    return %2
}
